# neura-router-telegram-mcp

./: .gitignore  LICENSE  README.md  command.md  go.mod  go.sum  requirements.txt  send_test_message.py  telegram_mcp.session
src/: main.py  mcp.py  telegram_mcp.py
src/telegram_mcp/: pyproject.toml  telegram_mcp.session
src/telegram_mcp/client/: __init__.py  telegram_mcp.py
src/telegram_mcp/server/: __init__.py  mcp.py
telegram-bridge/: config.ini  go.mod  go.sum  main.go
telegram_mcp/: main.py  pyproject.toml
telegram_mcp/client/: telegram_mcp.py
telegram_mcp/server/: mcp.py
