[project]
name = "neura-telegram-mcp-server"
version = "0.0.2"
description = "Neura Whatsapp MCP is a conversational sandbox that allows users to interact with their contacts, channels and groups on Telegram."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
]
